--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
 body{
   display: flex;
   justify-content: center;
-  background-color: hsl(0, 0%, 95%);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), purple;
 } 
 
 #item {
